Changelog:

10.10.2008 - 0.0.21
Turbo sound support added
Digital AY support added
ay code optimized
Content detector added
ayfly_converter is now able to read from stdin
Metadata (Name and Author) support added


24.10.2008 - 0.0.20
Minor changes:
Removed wxWidgets and SDK(Directx under Windows) dependency for building only library and converter
Added command line parsing code
Added ability for selection of multiple files in open dialog

21.10.2008 - 0.0.19
Added support for VTX format
Added ayfly_converter program

26.09.2008 - 0.0.18
Added basic playlist to S60 version
Updated z80ex library to latest version (thx 2 boo_boo)
DirectX driver is more stable now. Windows versions now use it instead of WaveAPI.
+Improoved stability on Windows Vista
Made mingw32 makefiles for building ayfly.dll library without Visual Studio (and even Windows)
Added first version of library API documentation
Fixed some bugs

06.09.2008 - 0.0.17
Added support for PT1 format
PT3 player rewritten in c++
Added YM emulation
Fixed some bugs in symbian version
Added S60 2nd (Symbian 8) build
Added UIQ3 build
Changed default windows audio driver from DirectX to Wave API
Made ANSI library version for windows
Removed ayfly_dynamicdll.h because of inconsistency with ayfly.h
Fixed bugs

24.08.2008 - 0.0.16
Added support for PSG format
Some optimizations in AY emulator
Symbian player rewritten to be more stable. Now using CMdaOutputStream interface
Added library - libayfly with clean interface :)
Added library usage example for Windows - ayfly_cmdline
DLL ayfly.dll is ready to be used in 3rd party applications
Added ability to add folders in playlist
Added sliders in ayfly application to change interrupts and AY frequency
A lot of bugs fixed
All functions rewritten to use c++ standard library


06.08.2008 - 0.0.15
New formats supported: SQT and PSC
Fixed bugs in AY emulator
AY emulator code is now the same on PC and Symbian builds

01.08.2008 - 0.0.14
Added filters for synth signal in symbian build